// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tranformToRdTraderDashboardData should return formatted RD data 1`] = `
Array [
  Object {
    "bank": "bank1",
    "commodity": "BFOET",
    "counterparty": "CN buyer 1",
    "currency": "EUR",
    "invoiceAmount": "1,000.00",
    "invoiceType": "Final",
    "rdId": "cc24a24b-ada5-4332-9ee7-394da255df67",
    "rdStatus": "PENDING_REQUEST",
    "status": "Pending request",
    "tradeDate": "2018/10/29",
    "tradeId": "5",
    "tradeTechnicalId": "a",
  },
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "USD",
    "invoiceAmount": undefined,
    "invoiceType": undefined,
    "rdId": undefined,
    "rdStatus": undefined,
    "status": "To be covered/discounted",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "d",
  },
  Object {
    "bank": "bank2",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "EUR",
    "invoiceAmount": "1,000.00",
    "invoiceType": "Final",
    "rdId": "cc24a24b-ada5-4332-9ee7-394da255df67",
    "rdStatus": "PENDING_REQUEST",
    "status": "Pending request",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "b",
  },
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "EUR",
    "invoiceAmount": "1,000.00",
    "invoiceType": "Final",
    "rdId": "cc24a24b-ada5-4332-9ee7-394da255df67",
    "rdStatus": "PENDING_REQUEST",
    "status": "Pending request",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "c",
  },
]
`;

exports[`tranformToRdTraderDashboardData should return only trades if there is no RD data in a formatted way 1`] = `
Array [
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer 1",
    "currency": "USD",
    "invoiceAmount": undefined,
    "invoiceType": undefined,
    "rdId": undefined,
    "rdStatus": undefined,
    "status": "To be covered/discounted",
    "tradeDate": "2018/10/29",
    "tradeId": "5",
    "tradeTechnicalId": "a",
  },
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "USD",
    "invoiceAmount": undefined,
    "invoiceType": undefined,
    "rdId": undefined,
    "rdStatus": undefined,
    "status": "To be covered/discounted",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "d",
  },
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "USD",
    "invoiceAmount": undefined,
    "invoiceType": undefined,
    "rdId": undefined,
    "rdStatus": undefined,
    "status": "To be covered/discounted",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "b",
  },
  Object {
    "bank": "N/A",
    "commodity": "BFOET",
    "counterparty": "CN buyer texaco",
    "currency": "USD",
    "invoiceAmount": undefined,
    "invoiceType": undefined,
    "rdId": undefined,
    "rdStatus": undefined,
    "status": "To be covered/discounted",
    "tradeDate": "2018/10/29",
    "tradeId": "2",
    "tradeTechnicalId": "c",
  },
]
`;
